# QuizSuite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  POSTGRESQL_INTEGRATION_README.md  README.md  pyproject.toml  test_mock_pipeline.py
backend/document_processing/: __init__.py  chunking_strategy.py  document_ingestor.py  metadata_enricher.py  models.py  nodes.py  text_cleaner.py
backend/document_processing/graph/: __init__.py  document_processing_graph_builder.py
backend/document_processing/model/: __init__.py  config_models.py  document_models.py  state_models.py
backend/document_processing/node/: __init__.py  base_nodes.py  document_processing_graph.py  document_processing_nodes.py  embedding_nodes.py  integrated_pipeline_nodes.py  step_by_step_nodes.py  storage_nodes.py
backend/document_processing/processor/: __init__.py  background_storage_manager.py  chunking_strategy.py  content_extractor.py  document_ingestor.py  document_processor.py  embedding_manager.py  metadata_enricher.py  postgresql_storage_manager.py  storage_manager.py  text_cleaner.py
backend/document_processing/state/: __init__.py  base_state.py  chunk_state.py  clean_state.py  embed_state.py  end_state.py  enrich_state.py  graph_state.py  ingest_state.py  process_state.py  storage_state.py  unified_state.py
backend/document_processing/utils/: __init__.py  chunk_validator.py  error_handling.py  image_extraction_utils.py  quality_score_calculator.py  reducers.py  tracing.py  visualization_utils.py
examples/: embedding_and_storage_example.py  langgraph_document_processing_example.py  package_structure_example.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
